--- a/src/views/hello.pug
+++ b/src/views/hello.pug
@@ -1,6 +1,14 @@
 extends layout.pug
 
 block content
-  div(class='font-semibold font-title') Hello, World
-  p Bienvenidos a Microsoft Teams Hello World sample app (Node.js)
+  div(class='font-semibold font-title') Microsoft Teams App
+  p Bienvenidos a Microsoft Teams proyecto en desarrollo
+  p Aun no esta listo, sea paciente ..
   
+  <a href='https://teams.microsoft.com/l/chat/0/0?users=28:be0c9e01-1770-48bb-9e44-67a2f3566fbb'><img src='https://dev.botframework.com/Client/Images/Add-To-MSTeams-Buttons.png'></a>
+  
+  
+  <span class="skype-button rounded"  data-bot-id="be0c9e01-1770-48bb-9e44-67a2f3566fbb" data-text="RequisBot"></span>
+  <script src="https://swc.cdn.skype.com/sdk/v1/sdk.min.js"></script>
+  <br>
+  <a href='https://join.skype.com/bot/be0c9e01-1770-48bb-9e44-67a2f3566fbb'><img src='https://dev.botframework.com/Client/Images/Add-To-Skype-Buttons.png'></a>
