--- a/src/views/layout.pug
+++ b/src/views/layout.pug
@@ -1,7 +1,7 @@
 doctype html
 html(lang='en')
   head
-    title Microsoft Teams Hello World Sample App
+    title Microsoft Teams App
     link(rel='stylesheet', type='text/css', href='/styles/msteams-16.css')
     link(rel='stylesheet', type='text/css', href='/styles/custom.css')
     script(src='https://statics.teams.microsoft.com/sdk/v1.0/js/MicrosoftTeams.min.js')
